k8s/base/backend-loader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-loader
  namespace: shadowapi
  labels:
    app: backend-loader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-loader
  template:
    metadata:
      labels:
        app: backend-loader
    spec:
      containers:
        - name: backend-loader
          image: git.devinlab.com/shadowapi/shadowapi/backend-loader:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-loader
  namespace: shadowapi
  labels:
    app: backend-loader
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: backend-loader
